# chatgpt-library-archiver

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  LICENSE  Makefile  README.md  auth.txt  auth.txt.example  bootstrap.py  generate_gallery_batch.py  generate_index.py  incremental_downloader.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.githooks/: pre-commit
.github/: dependabot.yml
.github/agents/: adr-specialist.agent.md  documentation-specialist.agent.md  gallery-ux-designer.agent.md  image-processing-specialist.agent.md  openai-specialist.agent.md  orchestrator-manager.agent.md  python-developer.agent.md  readiness-reviewer.agent.md  security-auditor.agent.md  testing-expert.agent.md
.github/skills/archiver-adr-workflow/: SKILL.md
.github/skills/archiver-testing-strategy/: SKILL.md
.github/skills/credential-handling/: SKILL.md
.github/skills/gallery-html-patterns/: SKILL.md
.github/skills/http-resilience/: SKILL.md
.github/skills/image-pipeline/: SKILL.md
.github/skills/openai-vision-api/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/adr/: README.md
docs/reviews/: IMPLEMENTATION_PLAN.md  README.md  code-quality-architecture.md  cross-review-ai-perspective.md  cross-review-architecture-perspective.md  cross-review-documentation-synthesis.md  cross-review-security-perspective.md  cross-review-testing-perspective.md  cross-review-ux-perspective.md  devops-ci-pipeline.md  documentation-quality.md  gallery-ux-accessibility.md  http-resilience.md  image-pipeline.md  openai-integration.md  security-audit.md  test-coverage-strategy.md
docs/reviews/2026-03-01-project-review/: devops-ci-pipeline.md  documentation-quality.md  gallery-ux-accessibility.md  http-resilience.md  image-pipeline.md  test-coverage-strategy.md
src/chatgpt_library_archiver/: __init__.py  __main__.py  ai.py  bootstrap.py  browser_extract.py  gallery.py  gallery_index.html  http_client.py  importer.py  incremental_downloader.py  metadata.py  status.py  tag_normalizer.py  tagger.py  thumbnails.py  utils.py
src/chatgpt_library_archiver/cli/: __init__.py  app.py
src/chatgpt_library_archiver/cli/commands/: bootstrap.py  download.py  extract_auth.py  gallery.py  import_command.py  tag.py
tests/: conftest.py  test_ai.py  test_bootstrap.py  test_browser_extract.py  test_cli.py  test_conftest_helpers.py  test_end_to_end.py  test_gallery.py  test_http_client.py  test_importer.py  test_metadata.py  test_pre_commit_hook.py  test_status.py  test_tag_normalizer.py  test_tagger.py  test_thumbnails.py  test_utils.py
