[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-library-archiver"
version = "0.1.0"
description = "Toolset for downloading, archiving, and browsing images generated via ChatGPT."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Kyle Johnson", email = "me@kyle.engineer"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities"
]
keywords = [
  "chatgpt",
  "openai",
  "image",
  "archiver",
  "gallery",
  "download"
]
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "openai>=1.0.0",
  "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "build>=1.0.0",
  "pre-commit>=3.5.0",
  "pytest>=7.0",
  "ruff>=0.1.0",
  "Pillow>=10.0.0"
]

[project.scripts]
chatgpt-archiver = "chatgpt_library_archiver.__main__:main"

[project.urls]
Homepage = "https://github.com/kabaka/chatgpt-library-archiver"
Repository = "https://github.com/kabaka/chatgpt-library-archiver"
Issues = "https://github.com/kabaka/chatgpt-library-archiver/issues"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.setuptools.package-data]
chatgpt_library_archiver = ["gallery_index.html"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
